# ecs_like

./: CMakeLists.txt  main.c
Components/: component.h  physics_component.h  position_component.h  texture_component.h  transform_component.h
Entitys/: entity.h  game_object.h  player_entity.h
List/: CMakeLists.txt  list.c  list.h
Systems/: ai_system.c  ai_system.h  collision_system.c  collision_system.h  drawing_system.c  drawing_system.h  event_system.c  event_system.h  moving_system.c  moving_system.h  system.c  system.h  transform_system.c  transform_system.h
Vector2D/: CMakeLists.txt  vector2d.c  vector2d.h  vector2f.c  vector2f.h
